<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	>
	<LinearLayout 
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		>

		<TextView
			android:text="@string/activity_name_header"
			style="@style/DetailsHeader"
 			/>
		<TextView
			android:id="@+id/activity_name"
			android:textSize="8pt"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<LinearLayout
				android:id="@+id/category"
				android:orientation="vertical"
				android:layout_height="wrap_content"
				android:layout_width="fill_parent"
				android:clickable="true"
				>
			<TextView
				android:id="@+id/activity_category_header"
				android:text="@string/activity_category_header"
				style="@style/DetailsHeader"
			/>
			<TextView
				android:id="@+id/activity_category"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			</LinearLayout>
			<TextView
				android:text="@string/activity_start_time_header"
				style="@style/DetailsHeader"
				/>
			<TextView
				android:id="@+id/activity_start_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<TextView
				android:text="@string/activity_end_time_header"
				style="@style/DetailsHeader"
				/>
			<TextView	
				android:id="@+id/activity_end_time"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				/>
			<Button
				android:id="@+id/stop_tracking"
				android:text="@string/stop_tracking"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:enabled="false"
				/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>