<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
	<EditText
		android:id="@+id/text_new_activity"
	    android:hint="@string/what_you_doing"
	    android:textStyle="italic"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		/>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>	
		<EditText
			android:id="@+id/text_category"
			android:textStyle="italic"
			android:hint="@string/text_category_hint"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
	</LinearLayout>
	<Button	
		android:id="@+id/btnConfirmNewActivity"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="Start Tracking"
		android:textSize="14dip"
		/>
	<TextView
		android:text="@string/today_header"
		style="@style/DetailsHeader"		
		/>	
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="@drawable/headerline"
		/>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:focusable="true"
		android:clickable="true"		
		>
	<TableLayout
    	android:id="@+id/activity_list"
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:focusableInTouchMode="true"
		android:clickable="true"
    	/>
    </ScrollView>
</LinearLayout>
